      methods.
    * Switches to more efficient Objects.requireNonNull in constructors.
    * Fixes the POST implementation in
      AuthorizationRequest.toHTTPRequest(HTTPRequest.Method) (iss #476).
    * Removes specification section references in JavaDocs to reduce
      maintenance effort (iss #475).

version 11.16 (2024-08-15)
    * Adds AuthenticationResponse.getIssuer interface method.
    * Adds AuthenticationResponse.getJWTResponse interface method.
    * Adds AuthenticationResponse.getResponseMode interface method.
    * Adds AuthenticationResponse.impliedResponseMode interface method.
    * Fixes base URI (redirect_uri) extraction in AuthorizationResponse.parse,
      AuthorizationSuccessResponse.parse, AuthorizationErrorResponse.parse,
      AuthenticationResponseParser.parse, AuthenticationSuccessResponse.parse
      and AuthenticationErrorResponse.parse (iss #477).

version 11.16.1 (2024-08-16)
    * Adds extra IDTokenClaimsSet constructor "aud", "exp" and "iat" argument
      checks.

version 11.17 (2024-08-18)
    * Adds DeviceSSOScopeValue.
    * The DeviceAuthorizationRequest should set the HTTP Accept header to
      "application/json" (iss #451)

version 11.18 (2024-08-20)
    * Adds explicit JWT "typ" (checking) support to SoftwareStatementProcessor.

version 11.19 (2024-08-29)
    * Adds static OIDCScopeValue.resolveClaimNames(Scope, ...) helper methods.

version 11.19.1 (2024-09-05)
    * OIDCScopeValue.resolveClaimNames(Scope, ...) must ignore the "openid"
      scope value that resolves to "sub".

version 11.20 (2024-09-29)
    * Adds DeviceSecretToken class to represent DeviceSecret instances as a
      Token.
    * Adds JSONObjectUtils.getNonBlankString method.
    * Certain parse methods must prevent unchecked IllegalArgumentExceptions
      due to empty or blank String (iss #479).
    * RefreshToken.parse(JSONObject) must not throw unchecked exception on
      empty or blank String (iss #480).